infrastructure/controllers/security/cert-manager.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: cert-manager
  labels:
    vector.dev/exclude: "true"
