infrastructure/controllers/security/sealed-secrets.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: sealed-secrets
  labels:
    vector.dev/exclude: "true"
