infrastructure/controllers/security/sealed-secrets-web.httproute.yaml
---
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: sealed-secrets-web
  namespace: sealed-secrets
  annotations:
    gethomepage.dev/enabled: "true"
    gethomepage.dev/name: "SealedSecrets"
spec:
  parentRefs:
    - name: gateway
      namespace: gateway
  hostnames:
    - "${sealedSecretsIngressHost}"
  rules:
    - backendRefs:
        - name: sealed-secrets-web
          port: 80
